# 30122-project-climate_change_is_not_a_joke

./: ADB Climate Change Financing - 2019-based on commitments-v2.xlsx  ADB Climate Change Financing - 2020-based on commitments-updated.xlsx  ADB Climate Change Financing - 2021-based on commitments-v3 (1).xlsx  ADB Climate-2021.csv  Cleaner.py  README.md  __main__.py  bob_stats.py  clean_data.csv  clean_data.py  clean_df.csv  climate_tag_exploartion.ipynb  climate_tag_exploration.ipynb  climate_tag_words - stop_words.csv  dashboard.py  data_table.py  dicts.py  draft_crawler.py  gain_cleaned.csv  gdp_cleaned.csv  gdp_percapita.csv  inputs.py  ll_wb.csv  load_data.py  pyproject.toml  run_preprocess.py  starting_graphs.py  tagged_clean_df.csv  wb_data_2.csv  wb_hl_data.csv  wb_preprocess.py
Regression/: test.py
adb_19-21_climate_data/: ADB Climate-2019.csv  ADB Climate-2020.csv  climate_tag_words.csv
data/: wb_data.csv
plots/: bar.py  map.py  scatter.py
project_tracker/: Cleaner.py  __main__.py  bob_stats.py  climate_tag_exploration.ipynb  dashboard.py  draft_crawler.py  inputs.py  load_data.py  starting_graphs.py
project_tracker/Graphs/: starting_graphs.py
project_tracker/data/: hl_data.csv  new_clean.csv  tokens.csv
project_tracker/data/raw/: Country_List.csv  clean_df.csv  gain_cleaned.csv  gdp_cleaned.csv  new_file.json  uncleaned consolidated post and pre data - wb_updated.xlsx  wb_data.csv
project_tracker/graphs/: dataviz.py  reg_plots.py  starting_graphs.py
project_tracker/load_and_clean/: Cleaner.py  draft_crawler.py  load_data.py  wb_preprocess.py
project_tracker/regressions/: test.py
viz/: dataviz.py  lm_scikit.py
