[tool.poetry]
name = "30122-project-climate-change-is-not-a-joke"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "30122_project_climate_change_is_not_a_joke"}]

[tool.poetry.dependencies]
python = "^3.8.1"
spacy = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
